# chess-project

./: .gitignore  1.txt  CMakeLists.txt  README.md
core/: CMakeLists.txt  aliases.hpp  commands.hpp  movement.cpp  movement.hpp
docs/: Description.tex
engine/: Basic.cpp  Basic.hpp  CMakeLists.txt
lib/: BMPImage.cpp  BMPImage.hpp  CMakeLists.txt  ChessFormat.cpp  ChessFormat.hpp  ChessGame.cpp  ChessGame.hpp  ChessPiece.cpp  ChessPiece.hpp  DisplayBoard.cpp  DisplayBoard.hpp  FileManager.cpp  FileManager.hpp  History.cpp  History.hpp
parser/: ArgParser.cpp  ArgParser.hpp  CMakeLists.txt  flag_class.cpp  flag_class.hpp  int_argument_class.cpp  int_argument_class.hpp  string_argument_class.cpp  string_argument_class.hpp
puzzle/: CMakeLists.txt  FindMate.cpp  FindMate.hpp
src/: CMakeLists.txt  main.cpp
src/utils/: functions.hpp
utils/: CMakeLists.txt
